--- a/Rosmsater.ioc
+++ b/Rosmsater.ioc
@@ -42,16 +42,19 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=VP_SYS_VS_tim1
+Mcu.Pin10=PA14
+Mcu.Pin11=PD2
+Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin13=VP_SYS_VS_tim1
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PC5
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PD2
-Mcu.Pin9=VP_FREERTOS_VS_CMSIS_V1
-Mcu.PinsNb=11
+Mcu.Pin4=PB13
+Mcu.Pin5=PB14
+Mcu.Pin6=PB15
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=14
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -85,6 +88,24 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB13.GPIO_Label=MPU_SCL
+PB13.GPIO_PuPd=GPIO_PULLUP
+PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB13.Locked=true
+PB13.PinState=GPIO_PIN_SET
+PB13.Signal=GPIO_Output
+PB14.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=MPU_AD0
+PB14.Locked=true
+PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PB15.GPIO_Label=MPU_SDA
+PB15.GPIO_PuPd=GPIO_PULLUP
+PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB15.Locked=true
+PB15.PinState=GPIO_PIN_SET
+PB15.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.Locked=true
