--- a/Rosmsater.ioc
+++ b/Rosmsater.ioc
@@ -36,25 +36,35 @@ Mcu.IP1=FREERTOS
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IPNb=6
+Mcu.IP5=TIM1
+Mcu.IP6=TIM8
+Mcu.IP7=USART1
+Mcu.IPNb=8
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PA14
-Mcu.Pin11=PD2
-Mcu.Pin12=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin13=VP_SYS_VS_tim1
+Mcu.Pin10=PC7
+Mcu.Pin11=PC8
+Mcu.Pin12=PC9
+Mcu.Pin13=PA8
+Mcu.Pin14=PA9
+Mcu.Pin15=PA10
+Mcu.Pin16=PA11
+Mcu.Pin17=PA13
+Mcu.Pin18=PA14
+Mcu.Pin19=PD2
 Mcu.Pin2=PD1-OSC_OUT
+Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin21=VP_SYS_VS_tim2
 Mcu.Pin3=PC5
-Mcu.Pin4=PB13
-Mcu.Pin5=PB14
-Mcu.Pin6=PB15
-Mcu.Pin7=PA9
-Mcu.Pin8=PA10
-Mcu.Pin9=PA13
-Mcu.PinsNb=14
+Mcu.Pin4=PB0
+Mcu.Pin5=PB1
+Mcu.Pin6=PB13
+Mcu.Pin7=PB14
+Mcu.Pin8=PB15
+Mcu.Pin9=PC6
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -75,19 +85,25 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM1_UP_IRQn
-NVIC.TimeBaseIP=TIM1
+NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM2_IRQn
+NVIC.TimeBaseIP=TIM2
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Signal=S_TIM1_CH4
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.Mode=PWM Generation2 CH2N
+PB0.Signal=TIM1_CH2N
+PB1.Mode=PWM Generation3 CH3N
+PB1.Signal=TIM1_CH3N
 PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PB13.GPIO_Label=MPU_SCL
 PB13.GPIO_PuPd=GPIO_PULLUP
@@ -114,6 +130,10 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=BEEP
 PC5.Locked=true
 PC5.Signal=GPIO_Output
+PC6.Signal=S_TIM8_CH1
+PC7.Signal=S_TIM8_CH2
+PC8.Signal=S_TIM8_CH3
+PC9.Signal=S_TIM8_CH4
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -177,12 +197,38 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
+SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
+SH.S_TIM8_CH1.ConfNb=1
+SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
+SH.S_TIM8_CH2.ConfNb=1
+SH.S_TIM8_CH3.0=TIM8_CH3,Output Compare3 CH3
+SH.S_TIM8_CH3.ConfNb=1
+SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
+SH.S_TIM8_CH4.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3N=TIM_CHANNEL_3
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2N,Channel-PWM Generation3 CH3N,Channel-PWM Generation4 CH4,Period,AutoReloadPreload
+TIM1.Period=3600-1
+TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM8.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM8.IPParameters=Channel-Output Compare3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Period,AutoReloadPreload
+TIM8.Period=3600-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_SYS_VS_tim1.Mode=TIM1
-VP_SYS_VS_tim1.Signal=SYS_VS_tim1
+VP_SYS_VS_tim2.Mode=TIM2
+VP_SYS_VS_tim2.Signal=SYS_VS_tim2
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
