--- a/Rosmsater.ioc
+++ b/Rosmsater.ioc
@@ -28,43 +28,56 @@ FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;myTask_KEY,-3,128,StartTask_KEY,Default,NULL,Dynamic,NULL,NULL;myTask_SERIAL,0,128,StartTask_SERIAL,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F103RCT6
 Mcu.Family=STM32F1
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
+Mcu.IP10=TIM8
+Mcu.IP11=USART1
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=TIM8
-Mcu.IP7=USART1
-Mcu.IPNb=8
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=TIM5
+Mcu.IPNb=12
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
-Mcu.Pin10=PC7
-Mcu.Pin11=PC8
-Mcu.Pin12=PC9
-Mcu.Pin13=PA8
-Mcu.Pin14=PA9
-Mcu.Pin15=PA10
-Mcu.Pin16=PA11
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PD2
+Mcu.Pin10=PB13
+Mcu.Pin11=PB14
+Mcu.Pin12=PB15
+Mcu.Pin13=PC6
+Mcu.Pin14=PC7
+Mcu.Pin15=PC8
+Mcu.Pin16=PC9
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PD1-OSC_OUT
-Mcu.Pin20=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin21=VP_SYS_VS_tim2
-Mcu.Pin3=PC5
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PB13
-Mcu.Pin7=PB14
-Mcu.Pin8=PB15
-Mcu.Pin9=PC6
-Mcu.PinsNb=22
+Mcu.Pin20=PA11
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PD2
+Mcu.Pin25=PB3
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin29=VP_SYS_VS_tim7
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA1
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PC5
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -85,11 +98,13 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
-NVIC.TIM2_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM2_IRQn
-NVIC.TimeBaseIP=TIM2
+NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM7_IRQn
+NVIC.TimeBaseIP=TIM7
 NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+PA0-WKUP.Signal=S_TIM5_CH1
+PA1.Signal=S_TIM5_CH2
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.Signal=S_TIM1_CH4
@@ -97,6 +112,9 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Signal=S_TIM2_CH1_ETR
+PA6.Signal=S_TIM3_CH1
+PA7.Signal=S_TIM3_CH2
 PA8.Signal=S_TIM1_CH1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -122,6 +140,9 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.PinState=GPIO_PIN_SET
 PB15.Signal=GPIO_Output
+PB3.Signal=S_TIM2_CH2
+PB6.Signal=S_TIM4_CH1
+PB7.Signal=S_TIM4_CH2
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=LED
 PC13-TAMPER-RTC.Locked=true
@@ -171,7 +192,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM8_Init-TIM8-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -201,11 +222,27 @@ SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,Encoder_Interface
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,Encoder_Interface
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,Encoder_Interface
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,Encoder_Interface
+SH.S_TIM4_CH2.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
+SH.S_TIM5_CH2.ConfNb=1
 SH.S_TIM8_CH1.0=TIM8_CH1,PWM Generation1 CH1
 SH.S_TIM8_CH1.ConfNb=1
 SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
-SH.S_TIM8_CH3.0=TIM8_CH3,Output Compare3 CH3
+SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
@@ -216,19 +253,27 @@ TIM1.Channel-PWM\ Generation3\ CH3N=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2N,Channel-PWM Generation3 CH3N,Channel-PWM Generation4 CH4,Period,AutoReloadPreload
 TIM1.Period=3600-1
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=EncoderMode
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IPParameters=EncoderMode
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
+TIM4.IPParameters=EncoderMode
+TIM5.EncoderMode=TIM_ENCODERMODE_TI12
+TIM5.IPParameters=EncoderMode
 TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM8.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM8.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM8.IPParameters=Channel-Output Compare3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Period,AutoReloadPreload
+TIM8.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4,Period,AutoReloadPreload,Channel-PWM Generation3 CH3
 TIM8.Period=3600-1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
 VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
-VP_SYS_VS_tim2.Mode=TIM2
-VP_SYS_VS_tim2.Signal=SYS_VS_tim2
+VP_SYS_VS_tim7.Mode=TIM7
+VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
